PIM-9051: Avoid cropping on assets preview (#11352)

--- a/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/product-edit-form/AssetCollectionField.less
+++ b/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/product-edit-form/AssetCollectionField.less
@@ -50,7 +50,7 @@
   &-assetThumbnail {
     width: @itemWidth - 2 * (@padding + 1px);
     height: @itemHeight - 2 * (@padding + 1px);
-    background-size: 100% auto;
+    background-size: contain;
     background-position: center center;
     background-repeat: no-repeat;
 
